--- a/FrameworkApp/www/about.html
+++ b/FrameworkApp/www/about.html
@@ -17,98 +17,10 @@
     <div class="page-content">
       <div class="content-block">
         <div class="content-block-inner">
-            <div id="container">
-            <div id="header">
-                <h1>Quiz Title/Header</h1>
-            </div>
-
-            <div id="questionOne"> 
-
-            <div id="question">
-                <h4>Question title would go right here...</h4>
-            <input type="range" min="0" max="100" value="50" class="slider" step="25" id="sliderOne">
-            </div>
-
-            <div id="box1">Far left</div>
-            <div id="box2">Left</div>
-            <div id="box3">Middle</div>
-            <div id="box4">Right</div>
-            <div id="box5">Far right</div>
-
-            </div>
-
-            <div id="questionTwo"> 
-
-            <div id="question">
-                <h4>Question two would go right here...</h4>
-            <input type="range" min="0" max="100" value="50" class="slider" step="25" id="sliderTwo">
-            </div>
-
-            <div id="box1">Far left 2</div>
-            <div id="box2">Left 2</div>
-            <div id="box3">Middle 2</div>
-            <div id="box4">Right 2</div>
-            <div id="box5">Far right 2</div>
-
-            </div>
-
-            <div id="questionThree"> 
-
-            <div id="question">
-                <h4>Question three would go right here...</h4>
-            <input type="range" min="0" max="100" value="50" class="slider" step="25" id="sliderThree">
-            </div>
-
-            <div id="box1">Far left 3</div>
-            <div id="box2">Left 3</div>
-            <div id="box3">Middle 3</div>
-            <div id="box4">Right 3</div>
-            <div id="box5">Far right 3</div>
-
-            </div>
-
-            <div id="questionFour"> 
-
-            <div id="question">
-                <h4>Question four would go right here...</h4>
-            <input type="range" min="0" max="100" value="50" class="slider" step="25" id="sliderFour">
-            </div>
-
-            <div id="box1">Far left 4</div>
-            <div id="box2">Left 4</div>
-            <div id="box3">Middle 4</div>
-            <div id="box4">Right 4</div>
-            <div id="box5">Far right 4</div>
-
-            </div>
-
-            <div id="questionFive"> 
-
-            <div id="question">
-                <h4>Question five would go right here...</h4>
-            <input type="range" min="0" max="100" value="50" class="slider" step="25" id="sliderFive">
-            </div>
-
-            <div id="box1">Far left 5</div>
-            <div id="box2">Left 5</div>
-            <div id="box3">Middle 5</div>
-            <div id="box4">Right 5</div>
-            <div id="box5">Far right 5</div>
-
-            </div>
-
-
-
-            <button onclick="myFunction3()">Click me for comment about score</button>    
-
-            <p id="demo"><p>    
-
-            </div>
-
-
-            <div id="result">
-            <p id="demo"><p>        
-            </div>
+          <p>Here is About page!</p>
+          <p>Go <a href="#" class="back">back</a> or click  <a href="#" class="create-page">here </a>to create dynamic page.</p>
+          <p>Mauris posuere sit amet metus id venenatis. Ut ante dolor, tempor nec commodo rutrum, varius at sem. Nullam ac nisi non neque ornare pretium. Nulla mauris mauris, consequat et elementum sit amet, egestas sed orci. In hac habitasse platea dictumst.</p>
+          <p>Fusce eros lectus, accumsan eget mi vel, iaculis tincidunt felis. Nulla tincidunt pharetra sagittis. Fusce in felis eros. Nulla sit amet aliquam lorem, et gravida ipsum. Mauris consectetur nisl non sollicitudin tristique. Praesent vitae metus ac quam rhoncus mattis vel et nisi. Aenean aliquet, felis quis dignissim iaculis, lectus quam tincidunt ligula, et venenatis turpis risus sed lorem. Morbi eu metus elit. Ut vel diam dolor.</p>
         </div>
       </div>
     </div>
